# rusty-aoc

./: .gitignore  Cargo.toml  README.md  fix_warnings.py
src/lib/: lib.rs  year_2025.rs
src/lib/year_2015/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs
src/lib/year_2016/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs
src/lib/year_2017/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_17.rs  day_20.rs  day_23.rs
src/lib/year_2018/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs
src/lib/year_2019/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_08.rs  day_09.rs  day_11.rs
src/lib/year_2020/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_14.rs  day_15.rs
src/lib/year_2021/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_21.rs
src/lib/year_2022/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_12.rs  day_22.rs  day_25.rs
src/lib/year_2023/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_13.rs  day_24.rs
src/lib/year_2024/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_11.rs  day_16.rs  day_19.rs
src/lib/year_2025/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  (+2 more)
src/old/: mod.rs
(+115 files in other folders)
