[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

[dependencies]
md5 = "0.7.0"
regex = "1"
thousands = "0.2.0"
lazy_static = "1.4.0"
itertools = "0.12.0"
chrono = "0.4.40"
range-set-blaze = "0.1.16"
rand = "0.9.1"

[[bin]]
name = "aoc"
path = "src/bin/main.rs"

[lib]
path = "src/lib/lib.rs"